# TradingBot2

./: .gitignore  ANALYSIS_4H_TIMEFRAME.md  ANALYSIS_56_FEATURES_FINAL_REPORT.md  ANALYSIS_DATA_DISTORTIONS_FULL.md  ANALYSIS_DETAILED_ISSUES.md  ANALYSIS_FEATURES_STRUCTURE.md  ANALYSIS_NAN_HANDLING.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_CRITICAL_FINDINGS.md  AUDIT_REPORT.md  AUDIT_SELF_CHECK_REPORT.md  AUDIT_VERIFICATION_REPORT.md  AUTO_SPLIT_GUIDE.md  AgentOrderTracker.h  BUG_REPORT_RETURNS_ZERO.md  BUG_REPORT_RSI_NAN.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODEBASE_STRUCTURE_ANALYSIS.md  COMPILATION_REPORT.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  DATASET_FIX_README.md  DEEP_AUDIT_11_FEATURES_4H_REPORT.md  DEEP_AUDIT_FIXES_SUMMARY.md  DEEP_AUDIT_REPORT_4H.md  DEEP_INTEGRATION_AUDIT_REPORT.md  DEEP_INTEGRATION_AUDIT_REPORT_4H.md  DETAILED_FEATURE_CORRUPTION_ANALYSIS.md  DOCUMENTATION_AUDIT_2025-11-11.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_VERIFICATION_REPORT.md  EV_AUDIT_SUMMARY_RU.md  EV_CALCULATIONS_AUDIT_REPORT.md  FEATURES_VALIDATION_CHECKLIST.md  FEATURE_ADAPTATION_4H_REPORT.md  FEATURE_AUDIT_REPORT.md  (+456 more)
adapters/: binance_spot_private.py
api/: __init__.py  config.py  spot_signals.py
artifacts/: signal_only_debug.csv  training_dataset.parquet  training_summary.json
audits/: value_head_output.md
backtest/: test_bar_backtest_bridge.py  test_bar_capacity_config.py  test_configure_adv_runtime.py  test_service_backtest_reports.py
benchmarks/: sim_kpi_thresholds.json  (+1 more)
configs/: adv.yaml  (+33 more)
(+176 files in other folders)
